# react-native-tor

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  package.json  react-native-tor.podspec  tsconfig.json
.zed/: settings.json
android/: build.gradle  gradle.properties
android/src/main/: AndroidManifest.xml  AndroidManifestNew.xml
android/src/main/java/com/tor/: TorModule.kt  TorPackage.kt
android/src/newarch/: TorSpec.kt
android/src/oldarch/: TorSpec.kt
example/: app.json  package.json
example/android/: settings.gradle
example/ios/: Podfile
example/src/: App.tsx
ios/: Tor.h  Tor.mm
native-tor/: Cargo.toml
native-tor/src/: android.rs  ios.rs  lib.rs  main.rs
src/: NativeTor.ts  index.tsx
