[package]
name = "tor"
version = "0.1.0"
edition = "2021"

[dependencies]
arti-client = { version = "0.23.0", features = [
    "rustls",
    "tokio",
    "static",
    "onion-service-service",
], default-features = false }
tor-rtcompat = "0.23.0"
tor-hsservice = "0.23.0"

# helpers
anyhow = "1.0.52"
futures = "0.3.19"

# used to forward logs to system logger
tracing-subscriber = "0.3.18"
tokio = { version = "1.40.0", features = ["macros"] }

# dependancies specific to iOS
tracing-oslog = "0.2.0"
android_logger = "0.11"

# dependancies specific to Android
# the java native interface
jni = { version = "0.19", default-features = false }

arti = { version = "1.2.8", features = [
    "experimental-api",
    "onion-service-service",
    "rustls",
    "tokio",
] }
# dependancies to make logs available with logcat
log = "0.4.22"
tor-cell = "0.23.0"
tor-config = "0.23.0"


[lib]
name = "tor"
# dylib is for Android, staticlib is for iOS
crate-type = ["dylib", "staticlib"]
